@@ -48,11 +48,9 @@
         </dependency>
         <dependency>
             <groupId>io.github.compevol</groupId>
-            <artifactId>beast-base</artifactId>
+            <artifactId>beast-test-utils</artifactId>
             <version>${beast.version}</version>
-            <classifier>tests</classifier>
-            <type>test-jar</type>
-            <scope>test</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -63,6 +61,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <release>25</release>
+                    <compilerArgs>
+                        <arg>--add-reads</arg>
+                        <arg>beast.labs=beast.test.utils</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -73,6 +75,7 @@
                     <workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
                     <argLine>
                         --add-reads beast.labs=ALL-UNNAMED
+                        --add-reads beast.labs=beast.test.utils
                         --add-reads beast.base=ALL-UNNAMED
                         --add-reads beast.pkgmgmt=ALL-UNNAMED
                     </argLine>
